2005-12-12  Vincent Noel  <vincent.noel@gmail.com>

	* configure.in: Post-release version bump.
	* NEWS: Release 2.13.3.

2005-12-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: fix generation of Makefile inside gfloppy/src

	* Makefile.am: add m4 to EXTRA_DIST

2005-12-05  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	Ported the whole documentation system to gnome-doc-utils

	* configure.in, Makefile.am: glue code for gnome-doc-utils

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* configure.in: Post-release version bump.

2005-11-14  Vincent Noel  <vnoel@cox.net>

	* README (Version): Release 2.13.2.

2005-10-28  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2005-10-21  noel  <vnoel@cox.net>

	* configure.in: Post-release version bump.

2005-10-21  Vincent Noel  <vnoel@cox.net>

	* configure.in: Release 2.13.1.

2005-10-13  Christian Persch  <chpe@cvs.gnome.org>

	* gnome-screenshot/gnome-screenshot.schemas.in:
	Fix "screenshooter" terminology, bug #162534.

2005-10-08  Takeshi AIHANA <aihana@gnome.gr.jp>

	* gfloppy/doc/ja/gfloppy-ja.omf:
	 Fixed invalid OMF element which is claimed by scrollkeeper-install
	 (BUG#316770).

2005-10-04  noel  <vnoel@cox.net>

	* configure.in: Post-release version bump.

	* NEWS: Release 2.12.1.

2005-09-06  Vincent Untz  <vuntz@gnome.org>

	* configure.in: Post-release version bump.

==================== 2.12.0 ====================

2005-09-06  Vincent Untz  <vuntz@gnome.org>

	* README, NEWS: Release 2.12.0

2005-08-22  Vincent Noel  <vnoel@cox.net>

	* NEWS: Release 2.11.92.

2005-08-08  Vincent Noel  <vnoel@cox.net>

	* configure.in: Post-release version bump.

	* NEWS: Release 2.11.91.

2005-07-25  Vincent Noel  <vnoel@cox.net>

	* configure.in: Post-release version bump.

	* NEWS: Release 2.11.90.

2005-07-11  Vincent Noel  <vnoel@cox.net>

	* configure.in: Post-release version bump.

	* NEWS: Release 2.11.2.

2005-06-08  Vincent Noel  <vnoel@cox.net>
